# object-log

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.agents/skills/helix/: SKILL.md
.ddx/: beads.jsonl  config.yaml  lifecycle-schema.json  versions.yaml
.github/workflows/: ci.yml  release.yml
docs/helix/00-discover/: product-vision.md
docs/helix/01-frame/: concerns.md  feature-registry.md  prd.md
docs/helix/02-design/: ntier-proposal.md
docs/helix/03-test/: test-plan.md
docs/helix/04-build/: implementation-plan.md
examples/: logengine_saturate.rs  quickstart.rs  s3_saturate.rs
src/: blob.rs  engine.rs  error.rs  lib.rs  manifest_sequencer.rs  model.rs  object_backend.rs  s3.rs  segment.rs  sequencer.rs  store.rs  util.rs
tests/: blob.rs  engine.rs  manifest.rs  object_backend.rs  properties.rs  s3.rs  store.rs
workflows/: DDX.md  EXECUTION.md  QUICKSTART.md  README.md  REFERENCE.md  artifact-hierarchy.md  artifact-schema.md  conventions.md  graph.yml  principles.md  ratchets.md  state-machine.yaml  state-rules.yml  workflow.yml
workflows/actions/: backfill-helix-docs.md  check.md  evolve.md  experiment.md  frame.md  fresh-eyes-review.md  implementation.md  input.md  measure.md  plan.md  polish.md  reconcile-alignment.md  report.md
workflows/activities/00-discover/: GATE.yaml  README.md
workflows/activities/01-frame/: GATE.yaml  README.md  enforcer.md  exit-gates.yml
workflows/activities/02-design/: GATE.yaml  README.md  enforcer.md
workflows/activities/03-test/: GATE.yaml  README.md  enforcer.md
workflows/activities/04-build/: GATE.yaml  README.md  enforcer.md  input-gates.yml
workflows/activities/05-deploy/: GATE.yaml  README.md  enforcer.md
workflows/activities/06-iterate/: GATE.yaml  README.md  enforcer.md
workflows/concerns/: README-auth-family.md  slots.yml
workflows/concerns/a11y-wcag-aa/: concern.md  practices.md
workflows/concerns/admin-console/: concern.md  practices.md
workflows/concerns/api-style/: concern.md  practices.md
workflows/concerns/auth/: concern.md  practices.md
workflows/concerns/auth-local-sessions/: concern.md  practices.md
workflows/concerns/authorization-model/: concern.md  practices.md
workflows/concerns/caching-strategy/: concern.md  practices.md
workflows/concerns/classic-layered/: concern.md  practices.md
workflows/concerns/clean-architecture/: concern.md  practices.md
workflows/concerns/concurrency-model/: concern.md  practices.md
workflows/concerns/cqrs/: concern.md  practices.md
workflows/concerns/databricks-apps/: concern.md  practices.md
workflows/concerns/databricks-declarative-pipelines/: concern.md  practices.md
workflows/concerns/demo-asciinema/: concern.md  practices.md
workflows/concerns/demo-playwright/: concern.md  practices.md
workflows/concerns/deployment-topology/: concern.md  practices.md
workflows/concerns/design-patterns-gof/: concern.md  practices.md
workflows/concerns/domain-driven-design/: concern.md  practices.md
workflows/concerns/e2e-kind/: concern.md  practices.md
workflows/concerns/e2e-playwright/: concern.md  practices.md
workflows/concerns/enterprise-application-patterns/: concern.md  practices.md
workflows/concerns/enterprise-integration-patterns/: concern.md  practices.md
workflows/concerns/event-sourcing/: concern.md  practices.md
workflows/diagrams/: artifact-flow.md  workflow-overview.md
workflows/legacy/: README.md
workflows/references/: bead-first.md  concern-resolution.md  context-digest.md  measure.md  principles-resolution.md  report.md
workflows/templates/: alignment-review.md  autoresearch-session.md  autoresearch-worklog.md  backfill-report.md  metric-definition.yaml  plan-document.md  polish-report.md  refinement-log.md
(+263 files in other folders)
