[package]
name = "object-log"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "An embeddable append-only log core with a pluggable object-storage backend (segments, content addressing, conditional writes)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/easel/object-log"
homepage = "https://github.com/easel/object-log"
documentation = "https://docs.rs/object-log"
readme = "README.md"
keywords = ["log", "object-storage", "append-only", "streaming", "wal"]
categories = ["database-implementations", "asynchronous", "data-structures"]
# Ship only crate sources + docs/licenses; drop the HELIX/ddx/agent tooling
# trees and design docs that otherwise bloat the package to ~650 files.
exclude = [
    "/.ddx", "/.claude", "/.agents", "/.github",
    "/docs", "/workflows", "/tests", "/Cargo.lock", "/.gitignore",
]

[dependencies]
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
tempfile = "3"
